Bug 91971 - StartCenter minimum size now too small with addition of Recent Files button
Summary: StartCenter minimum size now too small with addition of Recent Files button
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha1
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.2
Keywords: regression
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2015-06-09 16:23 UTC by V Stuart Foote
Modified: 2019-01-29 15:26 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
as in 5.1, with addition of recent files button--StartCenter minimum size is too small (34.36 KB, image/png)
2015-06-09 16:28 UTC, V Stuart Foote
Details
as in 4.4, recent files thumbnail canvas minimum fits 1 thumbnail, but minimum height is too short (56.86 KB, image/png)
2015-06-09 16:31 UTC, V Stuart Foote
Details
Screenshot StartCenter LO 5 RC1/RC2 (german) on OSX (111.51 KB, image/png)
2015-06-29 12:12 UTC, Sierk Bornemann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2015-06-09 16:23:06 UTC
The StartCenter has a minimum size allowing the thumbnail view canvas to be shrunk to 0, and a height that had been set to always show the full set of launcher buttons.  With addition of Recent Files button--Efe GSOC Templates project then Caoláns work on bug 83003--the minimum height is now to short to fully display the Base Database launch button. Need to reset the minimum size.
Comment 1 V Stuart Foote 2015-06-09 16:28:45 UTC
Created attachment 116427 [details]
as in 5.1, with addition of recent files button--StartCenter minimum size is too small
Comment 2 V Stuart Foote 2015-06-09 16:31:35 UTC
Created attachment 116428 [details]
as in 4.4, recent files thumbnail canvas minimum fits 1 thumbnail, but  minimum height is too short
Comment 3 Alex Thurgood 2015-06-22 09:22:46 UTC
Confirming also on OSX 10.10.3

Version: 5.1.0.0.alpha1+
Build ID: 843f7335b2e11dde66d5f6e0f98b98e30eff7119
Locale : fr-FR (fr.UTF-8)

The problem is even worse now OSX. In a default installation, the StartCenter, which uses Breeze large icons, now only show the first four document launchers, so Math and Database are no longer visible. There is no scroll, keyboard or mouse mechanism available for navigating to these launchers, making it impossible to click on.
Comment 4 Commit Notification 2015-06-22 19:47:47 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbe60f979590615f61d914f1c937c69e89c58880

tdf#91971: Add the menubar size to the height computation too.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Jan Holesovsky 2015-06-22 19:49:02 UTC
This should fix this, but I don't believe the fix will actually do anything on OS X; so that is probably a different issue.

Alex - if it is still not fixed, please open a separate OS X bug.

Thanks a lot!
Comment 6 Adolfo Jayme Barrientos 2015-06-23 01:27:40 UTC
The issue Alex mentions has nothing to do with this report, and is due to different sizing in the Breeze theme (I’ve already explained).
Comment 7 Commit Notification 2015-06-23 01:28:51 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e266a77951ac54b9c72667e046440bb2b5d81b3&h=libreoffice-5-0

tdf#91971: Add the menubar size to the height computation too.

It will be available in 5.0.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Alex Thurgood 2015-06-23 09:35:47 UTC
(In reply to Adolfo Jayme from comment #6)
> The issue Alex mentions has nothing to do with this report, and is due to
> different sizing in the Breeze theme (I’ve already explained).

Have therefore opened separate bug report.
Comment 9 Sierk Bornemann 2015-06-29 12:12:47 UTC
Issue still existant in 5.0.0.2 german on OSX 10.10.3.

Version: 5.0.0.2
Build-ID: a26d58f11b99b6aeddf7f7884effea188cc6e512
Gebietsschema: de-DE (de.UTF-8)

See attached screenshot.
Comment 10 Sierk Bornemann 2015-06-29 12:12:54 UTC
Created attachment 116917 [details]
Screenshot StartCenter LO 5 RC1/RC2 (german) on OSX
Comment 11 Jan Holesovsky 2015-06-29 13:57:25 UTC
Sierk: Can you please create a new OS X - specific bugreport for this?  Thank you!
Comment 12 V Stuart Foote 2015-06-29 14:13:08 UTC
(In reply to Jan Holesovsky from comment #11)
> ... Can you please create a new OS X - specific bugreport for this? 

I think Alex already did so with bug 92242
Comment 13 Adolfo Jayme Barrientos 2015-06-29 14:32:26 UTC
It’s just unbelievable how people can’t seem to understand that their issue is not related to this report.
Comment 14 Sierk Bornemann 2015-06-29 15:53:10 UTC
(In reply to Adolfo Jayme from comment #13)
> It’s just unbelievable how people can’t seem to understand that their issue
> is not related to this report.

Arrogance always is a bad mentor. And I feel, your comment is a little bit arrogant, sorry.

The Bug's name is: StartCenter minimum size now too small with addition of Recent Files button

And in it's meta data it is related to ALL platforms, and NOT reduced to one particular platform/OS.

So, in what regard is that what is put on the table here relating the OS X platform NOT related to THIS report?
Comment 15 Jan Holesovsky 2015-06-29 16:29:28 UTC
Sierk: Sorry about the wording, that was unfortunate :-(

The point is that the problem on OS X has other root cause than what was already fixed, so it has to be handled in another bug, otherwise it is too hard to track for everyone.

In other words - it is much easier to handle 2 reports of the same problem, than one report containing 2 problems.

Hope this explains the situation.  Thanks again for your report, please handle that in the bug 92242.
Comment 16 Telesto 2016-12-02 13:27:14 UTC
*** Bug 104328 has been marked as a duplicate of this bug. ***
Comment 17 Telesto 2016-12-03 15:40:31 UTC Comment hidden (obsolete)
Comment 18 Alex Thurgood 2019-01-18 08:02:52 UTC
This bug is back in master 

Version: 6.3.0.0.alpha0+
Build ID: 810e5008e75e54241e056de2129886689d7c21eb
CPU threads: 4; OS: Mac OS X 10.14.2; UI render: default; VCL: osx; 
Locale: fr-FR (fr_FR.UTF-8); UI-Language: en-US
Calc: threaded

on macOS Mojave 10.14.2
Comment 19 Alex Thurgood 2019-01-18 08:05:21 UTC
Arggh, sorry, didn't see that I'd previously opened a separate report for macOS
Comment 20 Alex Thurgood 2019-01-18 08:08:15 UTC
Sorry again, re-reading bug 92242, I see that the problem is not one of being able to resize the StartCenter, but indeed the one relating to the StartCenter window on first startup not displaying the Base icon.
Comment 21 Alex Thurgood 2019-01-18 08:10:14 UTC
(In reply to Alex Thurgood from comment #20)
> Sorry again, re-reading bug 92242, I see that the problem is not one of
> being able to resize the StartCenter, but indeed the one relating to the
> StartCenter window on first startup not displaying the Base icon.

This is with the automatic icon settings and Breeze icon set as the defaults.
Comment 22 Xisco Faulí 2019-01-21 19:03:37 UTC
(In reply to Alex Thurgood from comment #21)
> (In reply to Alex Thurgood from comment #20)
> > Sorry again, re-reading bug 92242, I see that the problem is not one of
> > being able to resize the StartCenter, but indeed the one relating to the
> > StartCenter window on first startup not displaying the Base icon.
> 
> This is with the automatic icon settings and Breeze icon set as the defaults.

Hi Alex,
This bug has been in RESOLVED FIXED status for more than 6 months.
If the issue is still reproducible with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/, please report a new issue in https://bugs.documentfoundation.org/enter_bug.cgi providing, if     needed, the steps and documents to reproduce it.
Thanks for your understanding and collaboration.
Closing as RESOLVED FIXED
Comment 23 BogdanB 2019-01-29 15:26:59 UTC
Fixed. Verified on
Version: 6.3.0.0.alpha0+
Build ID: 9bc10964f0673b64e282ad567d08bf7ebba4df65
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-01-27_18:08:30
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded