tdf#91971: Add the menubar size to the height computation too.

Change-Id: Ic03dc9e811df624ca492cd2688a30a1e07fe6496
Reviewed-on: https://gerrit.libreoffice.org/16414
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>